--- a/hal/src/multi.tex
+++ b/hal/src/multi.tex
@@ -1,4 +1,7 @@
 
+"In general, command queues are thread-safe"
+
+
 Mutex usually used when already using Arc.
 Arc allows sharing values. Mutex allows mutating shared values.
 
