returning Mar 21 about to edit

--- a/scratchpad.tex
+++ b/scratchpad.tex
@@ -1,5 +1,14 @@
 
 
+maybe we go in order.
+first we review objective c and rust and how they communicate.
+only later do we interact with metal. 
+so first we focus on the bindings. 
+
+
+
+-----
+
 now for CRT
 first on CPU
 
